--- a/testprøve.html
+++ b/testprøve.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 Dette er en test
-<h1>Dette er kodet i html test 1, hello world!</h1>
+<h1>Dette er kodet i HTML test 1, hello world!</h1>
 <a href="testprøve.html">testprøve 1</a>&nbsp;&nbsp;<a href="testprøve2.html">testprøve 2</a>
 <h2>Dette er kodet i html, hello world!</h2>
 <h3>Dette er kodet i html, hello world!</h3>
